feat: começando rota para criar documento
